# wl-kbd

./: PKGBUILD  README.md  README.ru.md  meson.build  wl-kbd.desktop.in
doc/man1/: wl-kbd.1
po/: meson.build  ru.po  wl-kbd.pot
src/: config.c  config.h  icon.c  icon.h  indicator.c  indicator.h  layout_code.c  layout_code.h  main.c  meson.build  shortcut_hint.c  shortcut_hint.h  wl_keyboard.c  wl_keyboard.h
tests/: meson.build  test_shortcut_hint.c
